# reroute_fukuoka

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  helper.py  log.md  log_li.md  package.json  pnpm-lock.yaml  todo.md
.github/workflows/: cd.yml  ci.yml
apps/api/: main.py  pyproject.toml  routes.py  schemas.py
apps/api/clients/: ekispert_bus.py
apps/api/data/: README.md  challenges.py  debug_city_loop.json  debug_longest_distance.json  debug_longest_duration.json  debug_most_unique.json  freepass_lines.yml  freepass_summary.csv  fukuoka_city.geojson  line_stop_edges.csv  lines_from_extreme.csv  raptor_debug_longest_distance.json  raptor_debug_longest_duration.json  raptor_debug_most_stops.json  segments_20251026.csv  segments_20251028.csv  segments_20251101.csv  stations.csv
apps/api/services/: __init__.py  planner.py  planner.py:after=@@  planner_cityloop.py  planner_constants.py  planner_explanation.md  planner_loader.py  planner_models.py  planner_utils.py  raptor.py  realtime_timetable.py
apps/api/services/planners/: __init__.py  city_loop.py  longest_distance.py  longest_duration.py  most_stops.py
apps/api/temporary_tools/: fill_coords_from_api.py  missing_station_codes.csv  missing_station_coords.csv
apps/api/tests/: test.py  test_health.py  test_planner_segments.py  test_raptor_diagnostics.py  test_routes.py  timetable_20251026.csv
apps/api/tools/: .cache_point_detail.jsonl  fetch_bus_timetable.py  fetch_dump_stations.py  fetch_operation_lines.py  find_missing_station_coords.py  tag_freepass.py
scripts/: README.md
(+32337 files in other folders)
