[tool.poetry]
name = "reroute-fukuoka-api"
version = "0.1.0"
description = "FastAPI backend for Re-Route FUKUOKA"
authors = ["Team Re-Route <team@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
